objects/Deal_Support__c.object
<CustomObject>
    <fields>
        <fullName>Secondary_Churn_Reason__c</fullName>
        <label>Secondary Churn Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Free Trial</fullName>
                </value>
                <value>
                    <fullName>Genesys Migration</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Other-Notes Provided</fullName>
                </value>
                <value>
                    <fullName>Oversold</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Price/Budget</fullName>
                </value>
                <value>
                    <fullName>Product Defects</fullName>
                </value>
                <value>
                    <fullName>Product Features</fullName>
                </value>
                <value>
                    <fullName>Production/Solution Fit</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Security_Issue_Type__c</fullName>
        <label>Security Issue Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lead_Offer_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ship_to_Contact_Email__c</fullName>
        <label>Ship to Contact Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Visit_Geographic_Radius__c</fullName>
        <label>Site Visit Geographic Radius</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Reference_Activity__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Only travel by car- 3 hr radius</fullName>
                </value>
                <value>
                    <fullName>Air travel in region only</fullName>
                </value>
                <value>
                    <fullName>willing to travel to any region</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Category__c</fullName>
        <label>Solution Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
                <value>
                    <fullName>Workforce Optimization</fullName>
                </value>
                <value>
                    <fullName>Process Automation</fullName>
                </value>
                <value>
                    <fullName>Analytics</fullName>
                </value>
                <value>
                    <fullName>Self Service</fullName>
                </value>
                <value>
                    <fullName>Contact Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Name__c</fullName>
        <label>Stage Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.Understand Needs</fullName>
                </value>
                <value>
                    <fullName>2.Define Requirements</fullName>
                </value>
                <value>
                    <fullName>3.Evaluate Options</fullName>
                </value>
                <value>
                    <fullName>4.Build Consensus</fullName>
                </value>
                <value>
                    <fullName>5.Purchase Solution</fullName>
                </value>
                <value>
                    <fullName>6.Closed</fullName>
                </value>
                <value>
                    <fullName>8.Renewal</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>1. Not Started</fullName>
                </value>
                <value>
                    <fullName>2. In Progress</fullName>
                </value>
                <value>
                    <fullName>3. On-Hold</fullName>
                </value>
                <value>
                    <fullName>4. Rejected</fullName>
                </value>
                <value>
                    <fullName>5. Migration Approved</fullName>
                </value>
                <value>
                    <fullName>6. Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Duration__c</fullName>
        <formula>/*IF(  ISPICKVAL(Status__c, &apos;Completed&apos;), (Date_Time_Completed__c - CreatedDate) , (NOW() - CreatedDate))*/
LastModifiedDate - Previous_Updated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Waiting for Input</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <formula>TEXT(Account__r.Country__r.RU__c)</formula>
        <label>Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject2__c</fullName>
        <label>Name Prospect/Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Area__c</fullName>
        <label>Support Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Consulting</fullName>
                </value>
                <value>
                    <fullName>Competitive Intelligence</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Deal Desk</fullName>
                    <label>Finance - Deal Desk</label>
                </value>
                <value>
                    <fullName>Finance – Field Finance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <label>Finance - Operations and Accounting</label>
                </value>
                <value>
                    <fullName>Play Support</fullName>
                </value>
                <value>
                    <fullName>POR Review</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Support</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Quote Request</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
                <value>
                    <fullName>Sales Ops</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Subscription PureSuccess</fullName>
                </value>
                <value>
                    <fullName>Tools/Systems Support</fullName>
                </value>
                <value>
                    <fullName>Transactional Help</fullName>
                </value>
                <value>
                    <fullName>Value Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Email2__c</fullName>
        <label>Support Email #2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tool__c</fullName>
        <label>Tool</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                    <default>true</default>
                    <label>Salesforce.com</label>
                </value>
                <value>
                    <fullName>Genie</fullName>
                </value>
                <value>
                    <fullName>Reference Edge</fullName>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Marketo</fullName>
                </value>
                <value>
                    <fullName>Partner Portal</fullName>
                </value>
                <value>
                    <fullName>Xactly Compensation tool</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trial_Evaluation__c</fullName>
        <label>Trial/Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New logo</fullName>
                </value>
                <value>
                    <fullName>Existing Business - Expansion</fullName>
                </value>
                <value>
                    <fullName>Existing Business - Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Existing Business - New Line of Business</fullName>
                </value>
                <value>
                    <fullName>Existing Business - Platform Migration</fullName>
                </value>
                <value>
                    <fullName>Renewal Only</fullName>
                </value>
                <value>
                    <fullName>Renewal - Remix</fullName>
                </value>
                <value>
                    <fullName>Renewal - Downgrade</fullName>
                </value>
                <value>
                    <fullName>Renewal - Upgrade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Reference_Activity__c</fullName>
        <label>Type of Reference Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Name Drop</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>Reference Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_in_Place__c</fullName>
        <label>Vendor in Place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>[24]7</fullName>
                </value>
                <value>
                    <fullName>8X8</fullName>
                </value>
                <value>
                    <fullName>Adeptra</fullName>
                </value>
                <value>
                    <fullName>Afiniti</fullName>
                </value>
                <value>
                    <fullName>Akcelerant</fullName>
                </value>
                <value>
                    <fullName>Alcatel-Lucent</fullName>
                </value>
                <value>
                    <fullName>Altigen</fullName>
                </value>
                <value>
                    <fullName>Altitude</fullName>
                </value>
                <value>
                    <fullName>Amazon</fullName>
                </value>
                <value>
                    <fullName>Appian</fullName>
                </value>
                <value>
                    <fullName>ASC Telecom</fullName>
                </value>
                <value>
                    <fullName>Aspect (Voxeo)</fullName>
                </value>
                <value>
                    <fullName>Asterix</fullName>
                </value>
                <value>
                    <fullName>Avaya (Nortel)</fullName>
                </value>
                <value>
                    <fullName>Bridgetec</fullName>
                </value>
                <value>
                    <fullName>Broadsoft</fullName>
                </value>
                <value>
                    <fullName>BT</fullName>
                </value>
                <value>
                    <fullName>Calabrio</fullName>
                </value>
                <value>
                    <fullName>CallCopy</fullName>
                </value>
                <value>
                    <fullName>Call Fire</fullName>
                </value>
                <value>
                    <fullName>Call Miner</fullName>
                </value>
                <value>
                    <fullName>Centurion</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Clarity Connect</fullName>
                </value>
                <value>
                    <fullName>ClickFox</fullName>
                </value>
                <value>
                    <fullName>Collab9</fullName>
                </value>
                <value>
                    <fullName>Computer Talk</fullName>
                </value>
                <value>
                    <fullName>Connecteo</fullName>
                </value>
                <value>
                    <fullName>Contact Solutions</fullName>
                </value>
                <value>
                    <fullName>Contractual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verified_training_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verified training certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>When_does_the_customer_need_this_feature__c</fullName>
        <inlineHelpText>Time frame feature is needed by customer</inlineHelpText>
        <label>When does the customer need this feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccdb_Id_dsr__c</fullName>
        <description>Adding Org Id to DSR object per Renee H (+ for reporting).</description>
        <inlineHelpText>If applicable, this field will pull in subscription/ccdb id here.</inlineHelpText>
        <label>CCDB Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Deal Support</label>
    <listViews>
        <fullName>All_Ask_Sales_Ops_DONT_EDIT_QUEUE</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <label>All Ask Sales Ops DONT EDIT QUEUE</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Allasksalesops</fullName>
        <columns>Request_Type__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Description__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <filters>
            <field>Requstor_Region__c</field>
            <operation>equals</operation>
            <value>ANZ</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>2/1/2018 12:00 AM</value>
        </filters>
        <label>ANZ requests</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Allasksalesopsqueue</fullName>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Description__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <label>All Ask Sales Ops QUEUE</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>App_Foundry</fullName>
        <columns>NAME</columns>
        <columns>Requester__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,Submitted,Assigned,In Progress,Waiting for Input,Completed</value>
        </filters>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>AppFoundry</value>
        </filters>
        <label>App Foundry</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Consulting</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Support_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Requester__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Business Consulting</value>
        </filters>
        <label>Business Consulting</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CANCELLATION_DSRs_For_KIRA</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Cloud_Deployment__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Requested_Action__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <filters>
            <field>Requested_Action__c</field>
            <operation>equals</operation>
            <value>Inactivate Line of Business</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>TEST</value>
        </filters>
        <label>CANCELLATION DSRs - For KIRA</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Competitive_Intelligence</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Subject__c</columns>
        <columns>Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Competitive Intelligence</value>
        </filters>
        <label>Competitive Intelligence</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Competitive_Intelligence_Partners</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Subject__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Competitive Intelligence</value>
        </filters>
        <label>Competitive Intelligence_Partners</label>
        <language>en_US</language>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Care</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Subject__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Support_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Requester__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Customer Care</value>
        </filters>
        <label>Customer Care</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Management_DSR_UNASSIGNED</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>Requested_Action__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Assigned_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>Data Management DSRs - UNASSIGNED</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
            <role>WWSalesOperation</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Management_DSRs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Focus_Area__c</columns>
        <columns>Requested_Action__c</columns>
        <columns>Description__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Requested_Action__c</field>
            <operation>notEqual</operation>
            <value>Inactivate Line of Business</value>
        </filters>
        <filters>
            <field>Focus_Area__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Data Management DSRs</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
            <role>WWSalesOperation</role>
            <role>WW_Worldwide_Sales_Support_Team</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Data_Management_DSRs1</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Request_Type__c</columns>
        <columns>Requested_Action__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Priority__c</columns>
        <columns>Request_Duration__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <columns>Requester__c</columns>
        <columns>Requstor_Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Request_Type__c</field>
            <operation>equals</operation>
            <value>Data Management</value>
        </filters>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Sales Ops</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>Requested_Action__c</field>
            <operation>equals</operation>
            <value>Inactivate Line of Business</value>
        </filters>
        <label>Data Management DSRs</label>
        <language>en_US</language>
        <sharedTo>
            <role>SystemAdministrator</role>
            <role>WWSalesOperation</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Deal_Factory</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Account__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>Support_Area__c</columns>
        <columns>Request_Type__c</columns>
        <columns>Requester__c</columns>
        <columns>Subject__c</columns>
        <columns>Description__c</columns>
        <columns>Priority__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Deal Desk,Deal Factory</value>
        </filters>
        <label>Deal Desk</label>
        <language>en_US</language>
        <sharedTo>
            <group>DS_Deal_Factory</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Finance_DSR</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Support_Area__c</field>
            <operation>equals</operation>
            <value>Finance – Field Finance</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Field Finance DSR</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>